--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/logos/logo-bkk.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modernize Free React Admin Template by Adminmart</title>
+    <title>BKK SMK Islam Malahayati</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600&display=swap"
       rel="stylesheet"
